# auv_mjlab

./: MUJOCO_LOG.TXT  README.md  pyproject.toml
logs/rsl_rl/auv_velocity/2026-03-27_02-15-03/: events.out.tfevents.1774548906.robot1.79343.0  model_0.pt  policy.onnx
logs/rsl_rl/auv_velocity/2026-03-27_02-17-34/: events.out.tfevents.1774549055.robot1.79562.0  model_0.pt  model_4.pt  policy.onnx
logs/rsl_rl/auv_velocity/2026-03-27_02-19-05/: events.out.tfevents.1774549146.robot1.79739.0  model_4.pt  policy.onnx
logs/rsl_rl/auv_velocity/2026-03-27_02-24-12/: events.out.tfevents.1774549453.robot1.80204.0  model_0.pt  model_4.pt  policy.onnx
logs/rsl_rl/auv_velocity/2026-03-27_02-25-57/: events.out.tfevents.1774549558.robot1.80448.0  model_4.pt  policy.onnx
logs/rsl_rl/auv_velocity/2026-04-01_22-54-52/: events.out.tfevents.1775055293.robot1.316148.0
logs/rsl_rl/auv_velocity/2026-04-01_22-58-09/: events.out.tfevents.1775055490.robot1.317883.0
logs/rsl_rl/auv_velocity/2026-04-01_22-58-53/: events.out.tfevents.1775055534.robot1.318349.0
logs/rsl_rl/auv_velocity/2026-04-01_22-59-35/: events.out.tfevents.1775055576.robot1.318932.0
logs/rsl_rl/auv_velocity/2026-04-01_23-02-02/: events.out.tfevents.1775055723.robot1.320437.0
logs/rsl_rl/auv_velocity/2026-04-01_23-03-52/: events.out.tfevents.1775055833.robot1.321771.0
logs/rsl_rl/auv_velocity/2026-04-01_23-04-54/: events.out.tfevents.1775055894.robot1.322607.0
scripts/: play.py  train.py
src/assets/robots/: __init__.py
src/auv_mjlab/: __init__.py
src/auv_mjlab/tasks/: __init__.py
(+360 files in other folders)
