[project]
name = "auv-mjlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "long753", email = "cl2848077709@outlook.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mjlab>=1.2.0",
]

[project.scripts]
auv-mjlab = "auv_mjlab:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
